--- a/adv/package.json
+++ b/adv/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^5.2.0",
     "framer-motion": "^11.12.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
